# Exploration-Strategies-in-Reinforcement-Learning

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: basic.yaml  comparison.yaml  dqn.yaml
demo/: app.py
notebooks/: exploration_strategies_demo.ipynb
scripts/: train.py
src/: __init__.py
src/algorithms/: __init__.py  exploration_strategies.py  q_learning.py
src/evaluation/: trainer.py
src/utils/: config.py  utils.py
tests/: test_exploration_strategies.py  test_q_learning.py
